# a2g-cli

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  DEMO.md  README.md  SPEC.md
.github/workflows/: ci.yml
conformance/vectors/01-verdict-semantics/: vs-001.json  vs-002.json  vs-003.json  vs-004.json  vs-005.json  vs-006.json  vs-007.json  vs-008.json
conformance/vectors/02-forbidden-first/: ff-001.json  ff-002.json  ff-003.json  ff-004.json  ff-005.json  ff-006.json
conformance/vectors/03-mandate-validation/: mv-001.json  mv-002.json  mv-003.json  mv-004.json  mv-005.json  mv-006.json
conformance/vectors/04-pipeline-ordering/: po-001.json  po-002.json  po-003.json  po-004.json  po-005.json  po-006.json  po-007.json  po-008.json  po-009.json  po-010.json
conformance/vectors/05-attested-state/: as-001.json  as-002.json  as-003.json  as-004.json  as-005.json  as-006.json  as-007.json
conformance/vectors/06-two-phase/: tp-001.json  tp-002.json  tp-003.json  tp-004.json  tp-005.json  tp-006.json  tp-007.json  tp-008.json
conformance/vectors/07-receipt-ledger/: rl-001.json  rl-002.json  rl-003.json  rl-004.json  rl-005.json
conformance/vectors/08-gateway-contract/: gc-001.json  gc-002.json  gc-003.json  gc-004.json  gc-005.json  gc-006.json  gc-007.json  gc-008.json  gc-009.json
conformance/vectors/09-issuer-trust/: it-001.json  it-002.json  it-003.json
conformance/vectors/10-cockpit-domains/: cd-001.json  cd-002.json  cd-003.json  cd-004.json  cd-005.json  cd-006.json  cd-007.json  cd-008.json  cd-009.json  cd-010.json  cd-011.json  cd-012.json  cd-013.json  cd-014.json  cd-015.json
crates/a2g-cli/: Cargo.toml
crates/a2g-cli/src/: ledger.rs  lineage.rs  main.rs  mandate_compile.rs  test_harness.rs  trust_summary.rs  visual_receipt.rs
crates/a2g-conformance/: Cargo.toml
crates/a2g-conformance/src/: main.rs
crates/a2g-core/: Cargo.toml
crates/a2g-core/benches/: decide.rs
crates/a2g-core/src/: authority.rs  cbor.rs  cockpit.rs  enforce.rs  error.rs  hitl.rs  identity.rs  ledger.rs  lib.rs  mandate.rs  output_gov.rs  proposal.rs  receipt.rs  vehicle.rs
crates/a2g-core/tests/: cbor_canonical.rs  panic_freedom.proptest-regressions  panic_freedom.rs
crates/a2g-demo/: Cargo.toml
crates/a2g-demo/src/: lib.rs  listen.rs  main.rs  showcase.rs
crates/a2g-demo/tests/: showcase_ci.rs
crates/a2g-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/a2g-ffi/include/: a2g.h  a2g_integration.h
crates/a2g-ffi/src/: lib.rs
crates/a2g-ffi/tests/: smoke_test.c
crates/a2g-gateway/: Cargo.toml
crates/a2g-gateway/src/: bus.rs  forbidden.rs  keys.rs  lib.rs  main.rs  pending.rs  protocol.rs  server.rs  state_ingest.rs  state_sim.rs  transport.rs
crates/a2g-gateway/tests/: adversarial.rs  e2e.rs
crates/a2g-mcp-proxy/: Cargo.toml  README.md
crates/a2g-mcp-proxy/demo/: proxy.toml
crates/a2g-mcp-proxy/src/: config.rs  echo_server.rs  governance.rs  lib.rs  main.rs  mcp.rs  proxy.rs  transport.rs
crates/a2g-mcp-proxy/tests/: e2e.rs
docs/: BUILD-PACK.md  DETERMINISM.md  INTEGRATION.md  PANIC_FREEDOM.md  aaos-vhal-mapping.md  aaos-vhal-verification.md  no_std-blockers.md  qnx-integration.md
docs/adr/: 0001-core-cli-split.md  0004-pure-decision-path.md  0005-vehicle-capability-model.md  0006-aaos-vhal-mapping.md  0007-attested-vehicle-state.md  0008-hitl-state-machine.md  0009-ffi-c-abi.md  0010-enforcing-gateway.md  0011-canonical-cbor-encoding.md  0012-unified-error-type.md  0013-mandate-cbor-encoding.md  0014-issuer-trust-enforcement.md  0015-binding-key-custody.md  0016-gateway-state-ingest.md  0017-comfort-context-policies.md  0018-cockpit-domains.md  0019-mcp-proxy.md  0019-qnx-build-portability.md  0020-mcp-proxy.md  0021-kotlin-android-sdk.md
examples/: in-cabin-assistant.mandate.toml
examples/c_integration/: Makefile  main.c
packaging/rpi/: README.txt  install.sh  package.sh
scripts/: demo.sh  gateway_demo.sh
sdk/android/: README.md  build.gradle.kts  settings.gradle.kts
sdk/android/a2g/: build.gradle.kts  consumer-rules.pro
sdk/android/a2g/src/main/: AndroidManifest.xml
sdk/android/a2g/src/main/kotlin/ai/vanaras/a2g/: A2g.kt  A2gException.kt  GatewayClient.kt  TrustAnchor.kt  Verdict.kt
sdk/android/a2g/src/main/res/values/: strings.xml
sdk/android/a2g/src/test/kotlin/ai/vanaras/a2g/: A2gDecideTest.kt  MockJniBridge.kt  ReasonCodeSyncTest.kt
sdk/android/gradle/: libs.versions.toml
sdk/android/gradle/wrapper/: placeholder.txt
sdk/android/sample/: build.gradle.kts
sdk/android/sample/src/main/: AndroidManifest.xml
sdk/android/sample/src/main/kotlin/ai/vanaras/a2g/sample/: DemoActivity.kt  GovernedCarClient.kt
sdk/android/sample/src/main/res/layout/: activity_demo.xml
sdk/android/sample/src/main/res/values/: strings.xml
tests/: battle_test.sh
