[workspace]
members = ["crates/a2g-core", "crates/a2g-cli", "crates/a2g-ffi", "crates/a2g-gateway", "crates/a2g-demo", "crates/a2g-conformance"]
resolver = "2"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minicbor = { version = "0.24", features = ["derive", "alloc"] }
ciborium = "0.2"

# Identity / time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# OS interface (gateway, Linux SocketCAN)
libc = "0.2"
