[package]
name = "a2g"
version = "0.1.0"
edition = "2021"
description = "Deterministic governance protocol for autonomous AI agents — CLI"
license = "MIT"
repository = "https://github.com/Vanaras-AI/A2G"

[[bin]]
name = "a2g"
path = "src/main.rs"

[dependencies]
a2g-core = { path = "../a2g-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# SQLite ledger
rusqlite = { version = "0.31", features = ["bundled"] }

# Shared deps used directly in CLI code
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = { workspace = true }
