[package]
name = "a2g-core"
version = "0.2.0"
edition = "2021"
description = "Deterministic governance engine for autonomous AI agents (no I/O, no SQLite)"
license = "MIT"

[features]
# std is on by default. Disable for no_std exploration (blocked — see docs/no_std-blockers.md).
default = ["std", "operator-state"]
std = []
# Allows constructing VerifiedVehicleState from operator-asserted (non-attested)
# values via from_operator_trusted(). On by default for dev/CLI use; production
# builds disable it so only gateway-verified attested state reaches decide()
# (ADR-0016).
operator-state = []

[dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
minicbor = { workspace = true }

[dev-dependencies]
# TestLedger is in-process; criterion for per-call latency benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
# Property-based tests for panic-freedom on extreme/malformed inputs (feat/panic-free-core)
proptest = "1"
# Used by panic_freedom integration tests to build CBOR mandates
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }

[[bench]]
name = "decide"
harness = false
