[package]
name = "a2g-gateway"
version = "0.2.0"
edition = "2021"
description = "Enforcing Gateway (ADR-0010) — sole writer to the vehicle bus, separate trust domain"

[[bin]]
name = "a2g-gateway"
path = "src/main.rs"

[[bin]]
name = "a2g-state-sim"
path = "src/state_sim.rs"

[lib]
name = "a2g_gateway"
path = "src/lib.rs"

[dependencies]
a2g-core = { path = "../a2g-core" }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
minicbor = { workspace = true }

[dev-dependencies]
tempfile = "3"
bs58 = { workspace = true }
